--- a/RocketryWebApp/README
+++ b/RocketryWebApp/README
@@ -1,1 +1,2 @@
+Rocketry Web App
 A Web App designed for calculating various abilities of rockets, divided into stages. The primary purpose is to help aid the rocket design process for the game Kerbal Space Program, but can also be used to calculate real life rockets. For each stage, the user can calculate the rocket's Δv, Specific Impulse, Thrust, or Thrust/Weight ratios based off of the stage's mass (with or without fuel). The calculations for Thrust/Weight ratios are done using Kerbin's surface gravity by default, but can be changed to reflect the gravity of any celestial body in the Kerbol System.
